# doudizhu-C

./: .gitignore  CMakeLists.txt  README.md  SL_v1.0.py  SL_v1.1.py  SL_v1_2.py  a3c.py  a3c_alter.py  a3c_alter_SL.py  a3c_alter_refined.py  a3c_test.py  a3c_v1.0.py  a3c_v1.1.py  a3c_v1.2.py  a3c_v1.3.py  a3c_v1.4.py  a3c_v1_4.py  a3c_val.py  card.cpp  card.hpp  card.py  dancing_link.cpp  dancing_link.h  env_test.py  environment.yml  game.cpp  game.hpp  inference.py  logger.py  main.cpp  main.py  mctree.h  montecarlo.py  network_RL.py  network_RL_v1_1.py  network_SL.py  network_SL_lite.py  network_SL_v1_1.py  network_SL_v1_2.py  network_a3c.py  (+8 more)
TensorPack/: ResNetBlock.py
TensorPack/A3C/: A3Cv1_5.py  evaluator.py  model_loader.py  simulator.py
TensorPack/A3C_FC/: A3cv1_5_fc.py  evaluator_fc.py  simulator_fc.py
TensorPack/AutoEncoder/: main.py
TensorPack/Hierarchical-Q/: main.py
TensorPack/Hierarchical_Q/: DQN.py  DQNModel.py  combination.py  evaluator.py  expreplay.py
TensorPack/MA_Hierarchical_Q/: DQNModel.py  baseline_evaluator.py  env.py  evaluator.py  expreplay.py  main.py  predictor.py  tools.py
TensorPack/PolicySL/: Policy_SL_v1_4.py  evaluator.py
TensorPack/ValueSL/: Value_SL_v1_4.py  evaluator.py
TensorPack/Vanilla_Q/: DQN.py  DQNModel.py  evaluator.py  expreplay.py
scripts/: agents.py  envs.py  experiments.py  mct_baseline.py
simulator/: config.py  coordinator.py  expreplay.py  main.py  manager.py  monitor.py  predictor.py  preprocess.py  sim.py  simulator.py  tools.py
strongAI/: card.cpp  card.h
test/: a.out  test.cpp
(+18 files in other folders)
